CSS improved to avoid overflow in info bar

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -35,20 +35,32 @@ body
     height: 25px;
     padding: 2px 2px 2px 10px;
     vertical-align: middle;
+    overflow: hidden;
 }
 
 /* task info */
 #headerBarTaskInfo
 {
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
     vertical-align: top;
+    display: inline-block;
     padding: 3px 0px 0px 0px;
-    font-size: 0.9em;
 }
 
-/* tab selection */
+@media (max-width: 1249px) {
+    #headerBarTaskInfo
+    {
+        font-size: 0.8em;
+    }
+}
+
+@media (min-width: 1250px) {
+    #headerBarTaskInfo
+    {
+        font-size: 0.9em;
+    }
+}
+
+    /* tab selection */
 #headerBarTabSelection
 {
     margin-top: 2px;
@@ -61,7 +73,7 @@ body
 */
 #sideBar {
     float: left;
-    min-width: 275px;
+    min-width: 300px;
     z-index: 0;
 }
 
@@ -148,19 +160,19 @@ body
 /** use optimized height to avoid scrollbar, as long as there is nothing like 100%-50px **/
 @media (max-height: 999px) {
     #mapCanvas {
-        height: 91%;        
+        height: 91%;
     }
 }
 
 @media (min-height: 1000px) and (max-height: 1599px) {
     #mapCanvas {
-        height: 94%;        
+        height: 94%;
     }
 }
 
 @media (min-height: 1600px) {
     #mapCanvas {
-        height: 97%;        
+        height: 97%;
     }
 }
 
@@ -183,8 +195,8 @@ body
 }
 
 
-/* -- color just a dummy for jscolor **/
-/* avoids problems with the IDE reporting missing styles */
+    /* -- color just a dummy for jscolor **/
+    /* avoids problems with the IDE reporting missing styles */
 .color {
     /** dummy **/
 }
